<!-- app/src/main/res/values/strings.xml -->
<resources>
    <string name="app_name">Recipe Vault</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_weak_password">Password should be at least 6 characters</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="error_empty_fields">Please fill all fields</string>
    <string name="default_web_client_id">1:462053578661:android:72d3625cdbb33fbc6c7a4c.apps.googleusercontent.com</string>
</resources>